# AI-Jargon-Simplified-rag-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/text_files/: doc1.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdfLoader.ipynb
