[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.2",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "sen>=0.8.1",
    "sentence-transformers>=5.5.0",
]
